transfer money added

--- a/cashOut.html
+++ b/cashOut.html
@@ -60,11 +60,11 @@
                             <img src="./assets/add-money.png" alt="icon">
                             <p class="font-normal text-sm leading-[18px] text-[#080808B3]">Add Money</p>
                         </div>
-                        <div id="card" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0874F2] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer bg-[#0874F20D]">
+                        <div id="cashOut" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0874F2] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer bg-[#0874F20D]">
                             <img src="./assets/cash-out.png" alt="icon">
                             <p class="font-semibold text-sm leading-[18px] text-[#0874F2]">Cashout</p>
                         </div>
-                        <div id="card" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0808081A] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer">
+                        <div id="transferMoney" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0808081A] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer">
                             <img src="./assets/transfer-money.png" alt="icon">
                             <p class="font-normal text-sm leading-[18px] text-[#080808B3]">Transfer Money</p>
                         </div>
