--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
                             <img src="./assets/cash-out.png" alt="icon">
                             <p class="font-normal text-sm leading-[18px] text-[#080808B3]">Cashout</p>
                         </div>
-                        <div id="card" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0808081A] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer">
+                        <div id="transferMoney" class="w-[123px] h-[90px] py-5 px-[10px] border border-[#0808081A] rounded-xl text-center flex items-center flex-col gap-y-2 cursor-pointer">
                             <img src="./assets/transfer-money.png" alt="icon">
                             <p class="font-normal text-sm leading-[18px] text-[#080808B3]">Transfer Money</p>
                         </div>
